# sailfish-weechat

./: .gitignore  CMakeLists.txt  regen-sources.sh  sailfish-weechat.desktop  sailfish-weechat.pro
qml/: IrcPage.qml
qml/desktop/: App.qml  DesktopApp.qml  SailfishApp.qml
qml/desktop/Sailfish/Silica/: qmldir
qml/desktop/SailfishWeechat/: ScrollBar.qml  StyledText.qml  qmldir
rpm/: sailfish-weechat.changes.in  sailfish-weechat.spec  sailfish-weechat.yaml
src/: FontMeasurer.cpp  FontMeasurer.hpp  RelayConnection.cpp  RelayConnection.hpp  TerminalColors.cpp  TerminalColors.hpp  WeechatState.cpp  WeechatState.hpp  main.cpp
